chore(release): cut v0.1.0-dev.6 - Vulkan/WebGPU GpuDevice pipeline factory and desktop WebGPU